added storage to permissions; can't get queryselector to work

--- a/manifest.json
+++ b/manifest.json
@@ -6,5 +6,18 @@
   "action": {
     "default_popup": "hello.html",
     "default_icon": "hello.png"
-  }
+  },
+  "permissions": [
+    "storage"
+  ],
+  "content_scripts": [
+    {
+      "js": [
+        "scripts/preferences.js"
+      ],
+      "matches": [
+        "https://www.dropout.tv/*"
+      ]
+    }
+  ]
 }
